removed tts functonalety but kept api route for future updating

--- a/backend/templates/settings.html
+++ b/backend/templates/settings.html
@@ -2,30 +2,11 @@
 
 <div id="settings" class="window hidden">
   <form id="settingsForm">
-    <!-- Electron -->
-    <div class="form-section" id="electron-settings">
-      <h3>Electron Settings</h3>
-      <div class="field-group">
-        <div title="Path to your Linux home directory inside WSL">
-          <label for="electronUrl">ELECTRON_URL</label>
-          <input
-            type="text"
-            id="electronUrl"
-            name="ELECTRON_URL"
-            value="http://localhost:8123"
-          />
-        </div>
-
-        <div id="status-electron" class="status-resut"></div>
-      </div>
-      <button type="button" id="verifyBtnElectron" class="verifyBtn">
-        Verify Connection
-      </button>
-    </div>
-
     <!-- Piper -->
     <div class="form-section" id="piper-settings">
-      <h3>Piper Settings</h3>
+      <h3>Text To Speech</h3>
+      <p>This is a work in progress</p>
+      <!-- <h3>Piper Settings</h3>
 
       <div class="field-group">
         <div title="Path to your Linux home directory inside WSL">
@@ -66,7 +47,7 @@
 
       <button type="button" id="verifyBtnPiper" class="verifyBtn">
         Verify Connection
-      </button>
+      </button> -->
     </div>
 
     <!-- Animation -->
