--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
   <head>
@@ -59,8 +59,6 @@
       </div>
 
       <div id="ollama-text-debug"></div>
-
-      <div class="html-import" data-src="{{ url_for('settings') }}"></div>
     </div>
 
     <script>
@@ -87,11 +85,6 @@
     <script
       type="module"
       src="{{ url_for('static', filename='scripts/main.js') }}"
-    ></script>
-
-    <script
-      type="module"
-      src="{{ url_for('static', filename='himport/htmlImporter.js') }}"
     ></script>
   </body>
 </html>
